package org.example.entities.bricks;

import com.github.hanyaeger.api.Coordinate2D;
import com.github.hanyaeger.api.Size;

public class MultiplyBrick extends Brick{

    public MultiplyBrick(Coordinate2D initialLocation, Size size) {
        super("entities/multiply-brick.png", initialLocation, size);
    }

}
