package org.example.entities.powerups;

public enum PowerUpType {
    SPEED,
    MULTIPLIER
}
